--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -7,7 +7,7 @@
 
 name: Build_x86_64
 
-on: 
+#on: 
   release:
     types: [published]
 
@@ -77,7 +77,7 @@ jobs:
       working-directory: ./openwrt
       run: |
         git clone https://github.com/xiaorouji/openwrt-passwall.git package/lienol
-        git clone "your_github_link" package/"your_folder_name"      
+       #git clone "your_github_link" package/"your_folder_name"      
 
     #- name: Import external feeds - JerryKuKu Argon
     #  working-directory: ./openwrt
