--- a/x86_64.config
+++ b/x86_64.config
@@ -69,8 +69,8 @@ CONFIG_OPENVPN_openssl_ENABLE_PF=y
 CONFIG_OPENVPN_openssl_ENABLE_PORT_SHARE=y
 CONFIG_OPENVPN_openssl_ENABLE_SERVER=y
 CONFIG_OPENVPN_openssl_ENABLE_SMALL=y
-CONFIG_KERNEL_BUILD_USER="eSir Playground"
-CONFIG_GRUB_TITLE="OpenWrt AutoBuild by eSirPlayground"
+CONFIG_KERNEL_BUILD_USER="openwrt"
+CONFIG_GRUB_TITLE="OpenWrt"
 CONFIG_PACKAGE_kmod-usb-ohci=y
 CONFIG_PACKAGE_kmod-usb-ohci-pci=y
 CONFIG_PACKAGE_kmod-usb-storage-uas=y
@@ -83,6 +83,12 @@ CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_luci-app-frpc=n
 CONFIG_PACKAGE_luci-app-vsftpd=y
 CONFIG_PACKAGE_luci-app-qbittorrent=y
+CONFIG_PACKAGE_luci-app-adbyby-plus=n
+CONFIG_PACKAGE_luci-app-unblockmusic=n
+CONFIG_PACKAGE_luci-app-uugamebooster=n
+CONFIG_PACKAGE_luci-app-vlmcsdr=n
+CONFIG_PACKAGE_luci-app-wol=n
+CONFIG_PACKAGE_luci-app-xlnetacc=n
 CONFIG_PACKAGE_luci-app-passwall=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Shadowsocks_Server=y
@@ -99,3 +105,27 @@ CONFIG_PACKAGE_luci-app-passwall_INCLUDE_ChinaDNS_NG=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_dns2socks=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_v2ray-plugin=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_simple-obfs=y
+CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-base-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-bonding-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ddns-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-qbittorrent-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-samba-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-unblockmusic-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=n
+CONFIG_PACKAGE_	luci-i18n-wol-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-xlnetacc-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=n
