--- a/x86_64.config
+++ b/x86_64.config
@@ -126,6 +126,6 @@ CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-uugamebooster-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-vlmcsd-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=n
-CONFIG_PACKAGE_	luci-i18n-wol-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-xlnetacc-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=n
