--- a/x86_64.config
+++ b/x86_64.config
@@ -129,3 +129,5 @@ CONFIG_PACKAGE_luci-i18n-vsftpd-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-xlnetacc-zh-cn=n
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=n
+CONFIG_PACKAGE_luci-i18n-ipsec-vpnd-zh-cn=n
+CONFIG_PACKAGE_luci-app-ipsec-vpnd=n
