--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -7,9 +7,9 @@
 
 name: Build_x86_64
 
-#on: 
-  #release:
-    #types: [published]
+on: 
+  release:
+    types: [published]
 
   push:
     branches: 
